--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -15,7 +15,25 @@
   },
   "services": {
     "title": "Hizmetlerimiz",
-    "subtitle": "Dijital ihtiyaçlarınız için kapsamlı çözümler"
+    "subtitle": "Dijital ihtiyaçlarınız için kapsamlı çözümler",
+    "learnMore": "Daha Fazla",
+    "items": {
+      "web-development": {
+        "title": "Web Geliştirme",
+        "description": "Modern, responsive ve SEO uyumlu web siteleri.",
+        "fullDescription": "İşletmeniz için en son teknolojilerle modern, hızlı ve kullanıcı dostu web siteleri geliştiriyoruz. Next.js, React ve TypeScript kullanarak SEO uyumlu, mobil öncelikli tasarımlar oluşturuyoruz.\n\nWeb sitelerimiz; yüksek performans, güvenlik ve ölçeklenebilirlik odaklıdır. E-ticaret, kurumsal web siteleri, blog platformları ve daha fazlası için özel çözümler sunuyoruz."
+      },
+      "mobile-apps": {
+        "title": "Mobil Uygulamalar",
+        "description": "iOS ve Android için native ve cross-platform uygulamalar.",
+        "fullDescription": "React Native ve Flutter kullanarak hem iOS hem de Android platformlarında çalışan yüksek performanslı mobil uygulamalar geliştiriyoruz.\n\nTek kod tabanıyla her iki platformda da native performans sunan uygulamalar oluşturuyoruz. Push bildirimleri, offline çalışma, cihaz sensörleri entegrasyonu ve daha fazlası."
+      },
+      "custom-software": {
+        "title": "Özel Yazılım",
+        "description": "İşletmenize özel yazılım çözümleri ve sistemler.",
+        "fullDescription": "İşletmenizin benzersiz ihtiyaçlarına göre tasarlanmış özel yazılım çözümleri geliştiriyoruz. ERP sistemleri, CRM uygulamaları, otomasyon araçları ve daha fazlası.\n\nMevcut sistemlerinizle entegre çalışan, ölçeklenebilir ve güvenli yazılım çözümleri sunuyoruz. İş süreçlerinizi optimize edin ve verimliliğinizi artırın."
+      }
+    }
   },
   "process": {
     "title": "Sürecimiz",
@@ -47,7 +65,24 @@
   },
   "testimonials": {
     "title": "Müşteri Hikayeleri",
-    "subtitle": "Sadece bizim sözümüze güvenmeyin"
+    "subtitle": "Sadece bizim sözümüze güvenmeyin",
+    "items": [
+      {
+        "name": "Sarah Johnson",
+        "role": "CEO, TechStart",
+        "content": "Appykod vizyonumuzu gerçeğe dönüştürdü. Detaylara gösterdikleri özen ve teknik uzmanlıkları eşsiz. Kesinlikle tavsiye ederim!"
+      },
+      {
+        "name": "Michael Chen",
+        "role": "Kurucu, GrowthIO",
+        "content": "Ekip projemizi zamanında ve bütçe dahilinde teslim etti. Animasyonlar ve karanlık mod uygulaması bizi büyüledi."
+      },
+      {
+        "name": "Emily Davis",
+        "role": "Pazarlama Direktörü, CreativeMinds",
+        "content": "Profesyonel, hızlı yanıt veren ve inanılmaz yetenekli. Yeni web sitemiz dönüşüm oranlarımızı önemli ölçüde artırdı."
+      }
+    ]
   },
   "cta": {
     "title": "Bir sonraki projenize başlamaya hazır mısınız?",
@@ -76,7 +111,9 @@
   },
   "footer": {
     "tagline": "Önemli dijital deneyimler inşa ediyoruz.",
-    "copyright": "Tüm hakları saklıdır."
+    "copyright": "Tüm hakları saklıdır.",
+    "madeWith": "ile yapıldı",
+    "inTurkey": "Türkiye'de"
   },
   "techstack": {
     "subtitle": "Modern teknolojilerle desteklenmektedir"
@@ -94,7 +131,51 @@
     "startingFrom": "Başlangıç",
     "getQuote": "Teklif Al",
     "ctaTitle": "Bu hizmeti almak ister misiniz?",
-    "ctaSubtitle": "Projenizi hayata geçirmek için bizimle iletişime geçin."
+    "ctaSubtitle": "Projenizi hayata geçirmek için bizimle iletişime geçin.",
+    "faqs": {
+      "web-development": [
+        {
+          "question": "Web sitesi ne kadar sürede hazır olur?",
+          "answer": "Projenin kapsamına bağlı olarak 2-8 hafta arasında değişir. Basit kurumsal siteler 2-3 haftada, karmaşık e-ticaret platformları 6-8 haftada tamamlanır."
+        },
+        {
+          "question": "Hangi teknolojileri kullanıyorsunuz?",
+          "answer": "Next.js, React, TypeScript, Tailwind CSS, Node.js ve modern veritabanı çözümleri kullanıyoruz. Her proje için en uygun teknolojiyi seçiyoruz."
+        },
+        {
+          "question": "Hosting ve domain dahil mi?",
+          "answer": "İsteğe bağlı olarak hosting ve domain hizmetleri de sunuyoruz. Vercel, AWS veya tercih ettiğiniz platformda barındırma yapabiliriz."
+        }
+      ],
+      "mobile-apps": [
+        {
+          "question": "Uygulama hem iOS hem Android'de çalışır mı?",
+          "answer": "Evet, React Native veya Flutter kullanarak tek bir kod tabanıyla her iki platformda da çalışan uygulamalar geliştiriyoruz."
+        },
+        {
+          "question": "Uygulama mağazalarına yükleme dahil mi?",
+          "answer": "Evet, App Store ve Google Play Store'a yükleme süreçlerini sizin adınıza yönetiyoruz."
+        },
+        {
+          "question": "Uygulama güncellemeleri nasıl yapılır?",
+          "answer": "Bakım paketlerimiz kapsamında düzenli güncellemeler ve yeni özellik eklemeleri yapıyoruz."
+        }
+      ],
+      "custom-software": [
+        {
+          "question": "Mevcut sistemlerimizle entegre olabilir mi?",
+          "answer": "Evet, mevcut ERP, CRM veya diğer sistemlerinizle API üzerinden entegrasyon sağlıyoruz."
+        },
+        {
+          "question": "Kaynak kodları bize ait olacak mı?",
+          "answer": "Evet, proje tamamlandığında tüm kaynak kodları ve dokümantasyon size teslim edilir."
+        },
+        {
+          "question": "Eğitim ve destek dahil mi?",
+          "answer": "Evet, kullanıcı eğitimi ve belirli bir süre teknik destek tüm projelerimize dahildir."
+        }
+      ]
+    }
   },
   "projectDetail": {
     "backToProjects": "İşlerimize Dön",
@@ -107,5 +188,21 @@
     "viewImage": "Görüntüle",
     "ctaTitle": "Benzer bir proje mi düşünüyorsunuz?",
     "ctaSubtitle": "Hayalinizdeki projeyi birlikte hayata geçirelim."
+  },
+  "admin": {
+    "login": "Admin Girişi",
+    "username": "Kullanıcı Adı",
+    "password": "Şifre",
+    "loginButton": "Giriş Yap",
+    "panel": "Admin Paneli",
+    "services": "Hizmetler",
+    "projects": "Projeler",
+    "messages": "Mesajlar",
+    "logout": "Çıkış Yap",
+    "addNew": "Yeni Ekle",
+    "areYouSure": "Emin misiniz?",
+    "title": "Başlık:",
+    "description": "Açıklama:",
+    "invalidCredentials": "Geçersiz kimlik bilgileri"
   }
 }
