feat: Google Analytics entegrasyonu ve proje/hizmet detay sayfalarÄ± dÃ¼zeltmeleri
- Google Analytics cookie consent ve event tracking eklendi
- Cookie consent bileÅŸeni (GDPR uyumlu, TR/EN destekli)
- Analytics utility fonksiyonlarÄ± ve hooks eklendi
- TÃ¼m Ã¶nemli etkileÅŸimler iÃ§in event tracking (form, CTA, nav, kart tÄ±klamalarÄ±)
- Proje ve hizmet detay sayfalarÄ± dÃ¼zeltildi (API fetch yerine direkt MongoDB servisleri)
- Dynamic rendering ayarlarÄ± eklendi
- Sayfa gÃ¶rÃ¼ntÃ¼leme takibi eklendi
- .env.local.example dosyasÄ± eklendi

--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -204,5 +204,14 @@
     "title": "Başlık:",
     "description": "Açıklama:",
     "invalidCredentials": "Geçersiz kimlik bilgileri"
+  },
+  "cookies": {
+    "title": "Çerez Kullanımı",
+    "message": "Bu web sitesi, deneyiminizi iyileştirmek için çerezler kullanmaktadır. Devam ederek çerez kullanımını kabul etmiş olursunuz.",
+    "accept": "Kabul Et",
+    "decline": "Reddet",
+    "learnMore": "Daha Fazla Bilgi",
+    "analytics": "Analitik çerezler, web sitesinin nasıl kullanıldığını anlamamıza yardımcı olur.",
+    "necessary": "Gerekli çerezler, web sitesinin temel işlevlerinin çalışması için gereklidir."
   }
 }
