--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -204,5 +204,14 @@
     "title": "Title:",
     "description": "Description:",
     "invalidCredentials": "Invalid credentials"
+  },
+  "cookies": {
+    "title": "Cookie Usage",
+    "message": "This website uses cookies to enhance your experience. By continuing, you agree to our use of cookies.",
+    "accept": "Accept",
+    "decline": "Decline",
+    "learnMore": "Learn More",
+    "analytics": "Analytics cookies help us understand how the website is used.",
+    "necessary": "Necessary cookies are required for the basic functions of the website."
   }
 }
