Edited page's turkish

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,8 +6,8 @@
     "contact": "Contact"
   },
   "hero": {
-    "title": "Digital Excellence",
-    "titlePrefix": "We Build",
+    "title": "Digital Future",
+    "titlePrefix": "We Design The",
     "titleSuffix": "",
     "subtitle": "Transforming ideas into powerful, scalable, and beautiful software solutions. Your partner in modern web development.",
     "ctaPrimary": "Start a Project",
